--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       >
         <img
           class="w-28 h-6 mr-2"
-          src="../public/indekstat_logo.png"
+          src="./public/indekstat_logo.png"
           alt="logo indekstat"
         />
         <div class="flex flex-row gap-4">
@@ -41,8 +41,8 @@
             </ul>
           </div>
           <div class="flex flex-row justify-center items-center gap-1">
-            <img src="../public/en.png" alt="en" class="size-6" />
-            <img src="../public/id.png" alt="id" class="size-6" />
+            <img src="./public/en.png" alt="en" class="size-6" />
+            <img src="./public/id.png" alt="id" class="size-6" />
           </div>
           <button class="bg-[#f05b24] text-white text-xs p-3 rounded-xl">
             Download Company Profile
@@ -55,7 +55,7 @@
         <div class="flex flex-row justify-between">
           <img
             class="w-24 h-6 mr-2"
-            src="../public/indekstat_logo.png"
+            src="./public/indekstat_logo.png"
             alt="logo indekstat"
           />
           <i class="material-icons bg-[#f05b24] text-white p-1 rounded-md"
@@ -64,8 +64,8 @@
         </div>
         <div class="flex justify-between">
           <div class="flex flex-row items-center gap-1">
-            <img src="../public/en.png" alt="en" class="size-6" />
-            <img src="../public/id.png" alt="id" class="size-6" />
+            <img src="./public/en.png" alt="en" class="size-6" />
+            <img src="./public/id.png" alt="id" class="size-6" />
           </div>
           <button class="bg-[#f05b24] text-white text-xs p-3 rounded-xl">
             Download Company Profile
@@ -114,7 +114,7 @@
         </h1>
         <div class="flex flex-row flex-wrap min-w-full justify-center gap-5">
           <div
-            class="w-96 min-h-[26rem] flex flex-col gap-8 items-center py-8 px-6 bg-slate-600 text-white text-center text-2xl font-semibold rounded-xl bg-[url(../public/bg.png)]"
+            class="w-96 min-h-[26rem] flex flex-col gap-8 items-center py-8 px-6 bg-slate-600 text-white text-center text-2xl font-semibold rounded-xl bg-[url(./public/bg.png)]"
           >
             <i class="fa-solid fa-magnifying-glass text-6xl"></i>
             Mendapatkan Data Akurat Melalui Riset Terpadu
@@ -125,7 +125,7 @@
             >
           </div>
           <div
-            class="w-96 min-h-[26rem] flex flex-col gap-8 items-center py-8 px-6 bg-slate-600 text-white text-center text-2xl font-semibold rounded-xl bg-[url(../public/bg.png)]"
+            class="w-96 min-h-[26rem] flex flex-col gap-8 items-center py-8 px-6 bg-slate-600 text-white text-center text-2xl font-semibold rounded-xl bg-[url(./public/bg.png)]"
           >
             <i class="fa-solid fa-chart-simple text-6xl"></i>
             Analisis Mendalam Terhadap Data
@@ -136,7 +136,7 @@
             >
           </div>
           <div
-            class="w-96 min-h-[26rem] flex flex-col gap-8 items-center py-8 px-6 bg-slate-600 text-white text-center text-2xl font-semibold rounded-xl bg-[url(../public/bg.png)]"
+            class="w-96 min-h-[26rem] flex flex-col gap-8 items-center py-8 px-6 bg-slate-600 text-white text-center text-2xl font-semibold rounded-xl bg-[url(./public/bg.png)]"
           >
             <i class="fa-solid fa-lightbulb text-6xl"></i>
             Memperoleh Keputusan Strategis yang Tepat
@@ -298,7 +298,7 @@
         <div class="flex flex-col min-w-full justify-center gap-8">
         <div class="flex flex-row min-w-full justify-center gap-8">
           <div
-            class="w-full min-h-[14rem] flex flex-col gap-8 justify-center items-center py-8 px-6 bg-slate-600 text-white text-center text-2xl font-semibold rounded-xl bg-[url(../public/bg.png)]"
+            class="w-full min-h-[14rem] flex flex-col gap-8 justify-center items-center py-8 px-6 bg-slate-600 text-white text-center text-2xl font-semibold rounded-xl bg-[url(./public/bg.png)]"
           >
             <i class="fa-solid fa-magnifying-glass text-6xl"></i>
             Riset dan Studi Kebijakan Publik
@@ -307,7 +307,7 @@
             >
           </div>
           <div
-            class="w-full min-h-[14rem] flex flex-col gap-8 justify-center items-center py-8 px-6 bg-slate-600 text-white text-center text-2xl font-semibold rounded-xl bg-[url(../public/bg.png)]"
+            class="w-full min-h-[14rem] flex flex-col gap-8 justify-center items-center py-8 px-6 bg-slate-600 text-white text-center text-2xl font-semibold rounded-xl bg-[url(./public/bg.png)]"
           >
             <i class="fa-solid fa-chart-simple text-6xl"></i>
             Konsultansi Politik
@@ -318,7 +318,7 @@
         </div>
         <div class="flex flex-row min-w-full justify-center gap-8">
           <div
-            class="w-full min-h-[14rem] flex flex-col gap-8 justify-center items-center py-8 px-6 bg-slate-600 text-white text-center text-2xl font-semibold rounded-xl bg-[url(../public/bg.png)]"
+            class="w-full min-h-[14rem] flex flex-col gap-8 justify-center items-center py-8 px-6 bg-slate-600 text-white text-center text-2xl font-semibold rounded-xl bg-[url(./public/bg.png)]"
           >
             <i class="fa-solid fa-magnifying-glass text-6xl"></i>
             Riset Manajemen dan Bisnis
@@ -327,7 +327,7 @@
             >
           </div>
           <div
-            class="w-full min-h-[14rem] flex flex-col gap-8 justify-center items-center py-8 px-6 bg-slate-600 text-white text-center text-2xl font-semibold rounded-xl bg-[url(../public/bg.png)]"
+            class="w-full min-h-[14rem] flex flex-col gap-8 justify-center items-center py-8 px-6 bg-slate-600 text-white text-center text-2xl font-semibold rounded-xl bg-[url(./public/bg.png)]"
           >
             <i class="fa-solid fa-chart-simple text-6xl"></i>
             Data Management and Analytics
@@ -339,7 +339,7 @@
         </div>
         <div class="flex flex-col justify-center items-center gap-5 text-white ">
             <h1 class="text-4xl font-bold">Jumlah Proyek Kami</h1>
-        <h1 class="text-4xl font-semibold rounded-xl py-4 px-3 bg-[url(../public/bg.png)]">122 Total Proyek</h1>
+        <h1 class="text-4xl font-semibold rounded-xl py-4 px-3 bg-[url(./public/bg.png)]">122 Total Proyek</h1>
         </div>
       </div>
 
@@ -347,10 +347,10 @@
       <div class="min-w-full flex flex-col gap-5 justify-center items-center py-20 px-10 lg:px-36">
         <h1 class="text-3xl lg:text-5xl font-medium">Bangga Menjadi Bagian Dari</h1>
         <div class="flex items-center gap-8">
-            <img class="max-w-56" src="../public/persepi.png" alt="">
-            <img class="max-w-56" src="../public/kadin.png" alt="">
-            <img class="max-w-56" src="../public/wapor.png" alt="">
-            <img class="max-w-56" src="../public/iapc.png" alt="">
+            <img class="max-w-56" src="./public/persepi.png" alt="">
+            <img class="max-w-56" src="./public/kadin.png" alt="">
+            <img class="max-w-56" src="./public/wapor.png" alt="">
+            <img class="max-w-56" src="./public/iapc.png" alt="">
         </div>
       </div>
 
@@ -364,7 +364,7 @@
       <!-- Footer -->
       <div class="flex items-center justify-around min-h-96">
         <div class="max-w-96 flex flex-col gap-3">
-            <img class="max-w-40" src="../public/indekstat_logo.png" alt="">
+            <img class="max-w-40" src="./public/indekstat_logo.png" alt="">
             <h1 class="font-semibold">PT. Indekstat Konsultan Indonesia</h1>
             <p>SCBD, Marquee Equity Tower Floor 37th, Jl. Jend. sudirman kav 52-53, Senayan, Kec. Kby. Baru, Kota Jakarta Selatan, Daerah Khusus Ibukota Jakarta 12190</p>
         </div>
