--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </h1>
         <div class="flex flex-row flex-wrap min-w-full justify-center gap-5">
           <div
-            class="w-96 min-h-[26rem] flex flex-col gap-8 items-center py-8 px-6 bg-slate-600 text-white text-center text-2xl font-semibold rounded-xl bg-[url(./public/bg.png)]"
+            class="w-96 min-h-[26rem] flex flex-col gap-8 items-center py-8 px-6 bg-slate-600 text-white text-center text-2xl font-semibold rounded-xl bg-[url('./public/bg.png')]"
           >
             <i class="fa-solid fa-magnifying-glass text-6xl"></i>
             Mendapatkan Data Akurat Melalui Riset Terpadu
@@ -125,7 +125,7 @@
             >
           </div>
           <div
-            class="w-96 min-h-[26rem] flex flex-col gap-8 items-center py-8 px-6 bg-slate-600 text-white text-center text-2xl font-semibold rounded-xl bg-[url(./public/bg.png)]"
+            class="w-96 min-h-[26rem] flex flex-col gap-8 items-center py-8 px-6 bg-slate-600 text-white text-center text-2xl font-semibold rounded-xl bg-[url('./public/bg.png')]"
           >
             <i class="fa-solid fa-chart-simple text-6xl"></i>
             Analisis Mendalam Terhadap Data
@@ -136,7 +136,7 @@
             >
           </div>
           <div
-            class="w-96 min-h-[26rem] flex flex-col gap-8 items-center py-8 px-6 bg-slate-600 text-white text-center text-2xl font-semibold rounded-xl bg-[url(./public/bg.png)]"
+            class="w-96 min-h-[26rem] flex flex-col gap-8 items-center py-8 px-6 bg-slate-600 text-white text-center text-2xl font-semibold rounded-xl bg-[url('./public/bg.png')]"
           >
             <i class="fa-solid fa-lightbulb text-6xl"></i>
             Memperoleh Keputusan Strategis yang Tepat
@@ -298,7 +298,7 @@
         <div class="flex flex-col min-w-full justify-center gap-8">
         <div class="flex flex-row min-w-full justify-center gap-8">
           <div
-            class="w-full min-h-[14rem] flex flex-col gap-8 justify-center items-center py-8 px-6 bg-slate-600 text-white text-center text-2xl font-semibold rounded-xl bg-[url(./public/bg.png)]"
+            class="w-full min-h-[14rem] flex flex-col gap-8 justify-center items-center py-8 px-6 bg-slate-600 text-white text-center text-2xl font-semibold rounded-xl bg-[url('./public/bg.png')]"
           >
             <i class="fa-solid fa-magnifying-glass text-6xl"></i>
             Riset dan Studi Kebijakan Publik
@@ -307,7 +307,7 @@
             >
           </div>
           <div
-            class="w-full min-h-[14rem] flex flex-col gap-8 justify-center items-center py-8 px-6 bg-slate-600 text-white text-center text-2xl font-semibold rounded-xl bg-[url(./public/bg.png)]"
+            class="w-full min-h-[14rem] flex flex-col gap-8 justify-center items-center py-8 px-6 bg-slate-600 text-white text-center text-2xl font-semibold rounded-xl bg-[url('./public/bg.png')]"
           >
             <i class="fa-solid fa-chart-simple text-6xl"></i>
             Konsultansi Politik
@@ -318,7 +318,7 @@
         </div>
         <div class="flex flex-row min-w-full justify-center gap-8">
           <div
-            class="w-full min-h-[14rem] flex flex-col gap-8 justify-center items-center py-8 px-6 bg-slate-600 text-white text-center text-2xl font-semibold rounded-xl bg-[url(./public/bg.png)]"
+            class="w-full min-h-[14rem] flex flex-col gap-8 justify-center items-center py-8 px-6 bg-slate-600 text-white text-center text-2xl font-semibold rounded-xl bg-[url('./public/bg.png')]"
           >
             <i class="fa-solid fa-magnifying-glass text-6xl"></i>
             Riset Manajemen dan Bisnis
@@ -327,7 +327,7 @@
             >
           </div>
           <div
-            class="w-full min-h-[14rem] flex flex-col gap-8 justify-center items-center py-8 px-6 bg-slate-600 text-white text-center text-2xl font-semibold rounded-xl bg-[url(./public/bg.png)]"
+            class="w-full min-h-[14rem] flex flex-col gap-8 justify-center items-center py-8 px-6 bg-slate-600 text-white text-center text-2xl font-semibold rounded-xl bg-[url('./public/bg.png')]"
           >
             <i class="fa-solid fa-chart-simple text-6xl"></i>
             Data Management and Analytics
@@ -339,7 +339,7 @@
         </div>
         <div class="flex flex-col justify-center items-center gap-5 text-white ">
             <h1 class="text-4xl font-bold">Jumlah Proyek Kami</h1>
-        <h1 class="text-4xl font-semibold rounded-xl py-4 px-3 bg-[url(./public/bg.png)]">122 Total Proyek</h1>
+        <h1 class="text-4xl font-semibold rounded-xl py-4 px-3 bg-[url('./public/bg.png')]">122 Total Proyek</h1>
         </div>
       </div>
 
