--- a/index.html
+++ b/index.html
@@ -355,9 +355,9 @@
       </div>
 
       <!-- Hubungi Kami -->
-      <div class="min-w-full flex flex-col gap-5 justify-center items-center py-20 px-10 lg:px-36 bg-[#f05b24]">
-        <h1 class="text-3xl lg:text-5xl font-medium">Hubungi Kami</h1>
-        <p class="text-xl font-normal">Ada yang bisa kami bantu?, klik tombol di bawah ini</p>
+      <div class="min-w-full flex flex-col gap-5 justify-between items-center py-20 px-10 lg:px-36 bg-[#f05b24]">
+        <h1 class="text-3xl lg:text-5xl font-medium text-white">Hubungi Kami</h1>
+        <p class="text-xl font-normal text-white">Ada yang bisa kami bantu?, klik tombol di bawah ini</p>
         <button class="text-xl font-medium rounded-lg px-4 py-3 bg-white shadow-md">Contact Us</button>
       </div>
 
