--- a/index.html
+++ b/index.html
@@ -355,14 +355,14 @@
       </div>
 
       <!-- Hubungi Kami -->
-      <div class="min-w-full flex flex-col gap-5 justify-between items-center py-20 px-10 lg:px-36 bg-[#f05b24]">
+      <div class="min-w-full flex flex-col gap-5 justify-center items-center py-20 px-10 lg:px-36 bg-[#f05b24]">
         <h1 class="text-3xl lg:text-5xl font-medium text-white">Hubungi Kami</h1>
         <p class="text-xl font-normal text-white">Ada yang bisa kami bantu?, klik tombol di bawah ini</p>
         <button class="text-xl font-medium rounded-lg px-4 py-3 bg-white shadow-md">Contact Us</button>
       </div>
 
       <!-- Footer -->
-      <div class="flex items-center justify-around min-h-96">
+      <div class="flex items-center justify-between px-36 min-h-96">
         <div class="max-w-96 flex flex-col gap-3">
             <img class="max-w-40" src="./public/indekstat_logo.png" alt="">
             <h1 class="font-semibold">PT. Indekstat Konsultan Indonesia</h1>
