--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
       </div>
 
       <!-- Footer -->
-      <div class="flex items-center justify-between px-36 min-h-96">
+      <div class="flex items-center justify-around min-h-96">
         <div class="max-w-96 flex flex-col gap-3">
             <img class="max-w-40" src="./public/indekstat_logo.png" alt="">
             <h1 class="font-semibold">PT. Indekstat Konsultan Indonesia</h1>
